--- a/css/styles.css
+++ b/css/styles.css
@@ -190,9 +190,18 @@ button a:hover {
 
 /* Responsividade para dispositivos menores */
 @media (max-width: 768px) {
+    .home {
+        align-items: end;
+        padding: 20px 10px; /* Ajusta o padding para reduzir espaço */
+        min-height: 80vh;   /* Reduz a altura mínima da seção em dispositivos móveis */     
+    }
+
     .home-conteiner, .beneficios-conteiner {
         flex-direction: column; /* Empilha a imagem e o texto em telas pequenas */
         padding: 10px;          /* Reduz o padding para aproximar mais os elementos */
+        align-items: center;    /* Centraliza horizontalmente os elementos */
+        justify-content: center; /* Centraliza verticalmente os elementos */
+        text-align: center;
     }
 
     .home-content, .beneficios-content, .home-description, .beneficios-description {
@@ -211,6 +220,13 @@ button a:hover {
         position: relative; /* Altera para relative para evitar sobreposições */
         padding-top: 0;     /* Remove o padding superior para alinhar melhor o texto */
         margin-top: -20px;  /* Ajusta o espaçamento acima para aproximar do conteúdo */
+        margin-left: 10%;
+        margin-right: 10%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;  /* Centraliza os itens horizontalmente */
+        justify-content: center; /* Centraliza verticalmente */
+        text-align: center;
     }
 
     .home-description h1, .beneficios-description h2 {
@@ -223,7 +239,7 @@ button a:hover {
         margin-bottom: 1rem; /* Diminui o espaçamento inferior */
     }
 
-    .home-content img, .beneficios-content img {
+    .home-content img {
         display: none;
         margin-bottom: 20px; /* Aproxima a imagem do texto */
         max-width: 100%; /* A imagem ocupa 100% da largura da div em dispositivos móveis */
