--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,15 @@ html {
 section {
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  min-height: 100vh; /* Altura mínima baseada na viewport */
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
-  overflow: hidden; /* Garante que nenhum elemento extra cause rolagem */
+  overflow: hidden;
+  min-height: -webkit-fill-available; /* Ajuste para iOS */
 }
+
 
 /* Ajuste de fundo e escurecimento */
 .home,
@@ -185,12 +187,16 @@ button a:hover {
   }
   
   .beneficios-conteiner {
-    flex-direction: column; /* Empilha a imagem e o texto em telas pequenas */
-    padding: 10px; /* Reduz o padding para aproximar mais os elementos */
-    align-items: center; /* Centraliza horizontalmente os elementos */
-    text-align: center;
-    justify-content: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centraliza verticalmente */
+    align-items: center; /* Centraliza horizontalmente */
+    overflow-x: hidden; /* Evita rolagem horizontal */
+    width: 100%; /* Certifica-se de que o container ocupe 100% da largura */
+    padding: 20px;
   }
+  
 
   .home-content,
   .beneficios-content,
